--- a/backend/data/templates/template_config.json
+++ b/backend/data/templates/template_config.json
@@ -624,7 +624,7 @@
     }
   },
   "NDA": {
-    "filename": "employment/NDA-Jinja2-Fixed.docx",
+    "filename": "employment/NDA.docx",
     "category": "Employment",
     "description": "Non-Disclosure Agreement for protecting confidential information between parties",
     "keywords": [
