--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
+    "qrcode.react": "^3.2.0",
     "quill": "^1.3.7",
     "quill-to-word": "^1.3.0",
     "react": "^18.2.0",
